# src/main/java/com/pratishthan/usermanagement/controller/SubscriptionController.java
@@ -1,0 +1,28 @@
+package com.pratishthan.usermanagement.controller;
+
+import com.pratishthan.usermanagement.dto.SubscriptionDTO;
+import com.pratishthan.usermanagement.service.SubscriptionService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/subscription")
+public class SubscriptionController {
+
+    private final SubscriptionService subscriptionService;
+
+    public SubscriptionController(SubscriptionService subscriptionService) {
+        this.subscriptionService = subscriptionService;
+    }
+
+    @PostMapping
+    public ResponseEntity<SubscriptionDTO> createSubscription(@RequestBody SubscriptionDTO subscription) {
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(subscriptionService.createSubscription(subscription));
+    }
+}
